Trying new session and UI auth
